# goya

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: CD.yml  CI.yml  rust.yml
benchmarks/: .gitignore  README.md  bench.js  goya.js  kuromoji.js  package-lock.json  package.json
benchmarks/scripts/: setup
dictionary/: Cargo.toml
goya/: Cargo.toml
goya-cli/: Cargo.toml
goya-cli/src/: build.rs  exporter.rs  main.rs  path_util.rs  repl.rs
goya-wasm/: .gitignore  Cargo.toml  package.json  tsconfig.json  webpack.config.js
goya-wasm/docs/: development.md
goya-wasm/scripts/: build-dict
goya-wasm/src/: lib.rs
goya-wasm/web/: App.tsx  Dot.tsx  MorphologicalAnalysis.worker.ts  Result.tsx  Table.tsx
goya/src/: char_class.rs  common_prefix_tree.rs  dictionary.rs  dot.rs  double_array.rs  id.rs  ipadic.rs  ipadic_loader.rs  lattice.rs  lib.rs  morpheme.rs  word_features.rs  word_set.rs
ipadic/: Cargo.toml
ipadic/src/: ipadic.rs  ipadic_loader.rs  lib.rs
morphological-analysis/: Cargo.toml
morphological_analysis/: Cargo.toml
morphological_analysis/src/: common_prefix_tree.rs  darts.rs  darts_builder.rs  dot.rs  double_array.rs  extractor.rs  id.rs  ipadic.rs  ipadic_loader.rs  lattice.rs  lib.rs  mast.rs  morpheme.rs  trie_tree.rs  vocabulary.rs  word_set.rs
playground/: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
playground/src/: App.tsx  Dot.tsx  MorphologicalAnalysis.worker.ts  Result.tsx  Table.tsx  goya.worker.ts  index.html  index.tsx
scripts/: build-dict  build-wasm  lookup  vercel-build  vercel-install
wasm-core/: .gitignore  Cargo.toml  README.md
wasm-core/src/: lib.rs
wasm-features/: Cargo.toml  README.md
wasm-features/src/: lib.rs
