[package]
authors = ["Leko <leko.noor@gmail.com>"]
categories = ["command-line-interface"]
description = "CLI for Goya"
edition = "2018"
license = "Apache-2.0 OR MIT"
name = "goya-cli"
repository = "https://github.com/Leko/goya"
version = "0.1.0"

[[bin]]
name = "goya"
path = "src/main.rs"

[dependencies]
bytesize = {version = "1.1.0", features = ["serde"]}
clap = "3.0.0-beta.4"
console = "0.14"
dirs = "4.0"
futures = "0.3.17"
goya = {path = "../goya"}
goya-ipadic = {path = "../ipadic"}
indexmap = {version = "1.7", features = ["serde"]}
rkyv = {version = "0.7.19", features = ["indexmap"]}
rmp-serde = "1.0.0-beta.2"

[dev-dependencies]
bincode = "1.3"
lazy_static = "1.4"
postcard = {version = "0.7", features = ["alloc"]}
serde = {version = "1.0", features = ["derive"]}
serde-pickle = "1.1"
serde_cbor = "0.11.2"
serde_json = "1.0"
