[package]
name = "goya-wasm"
version = "0.1.0"
edition = "2018"
authors = ["Leko <leko.noor@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
morphological_analysis = { path = "../morphological_analysis" }
wasm-bindgen = "0.2.78"
lazy_static = "1.4"
rkyv = { git = "https://github.com/rkyv/rkyv", tag = "v0.7.19" }
