[package]
authors = ["Leko <leko.noor@gmail.com>"]
categories = ["wasm", "data-structures", "text-processing"]
description = "WebAssembly binding of Goya"
edition = "2018"
license = "MIT"
name = "goya-wasm"
repository = "https://github.com/Leko/goya"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4"
goya = {path = "../goya"}
rkyv = {git = "https://github.com/rkyv/rkyv", tag = "v0.7.19"}
serde = {version = "1.0", features = ["derive"]}
wasm-bindgen = {version = "0.2.78", features = ["serde-serialize"]}
