[package]
authors = ["Leko <leko.noor@gmail.com>"]
categories = ["data-structures", "text-processing"]
description = "Yet another morphological analyzer for Rust and WebAssembly"
edition = "2018"
license = "Apache-2.0 OR MIT"
name = "goya"
repository = "https://github.com/Leko/goya"
version = "0.1.6"

[dependencies]
indexmap = {version = "1.7", features = ["serde"]}
itertools = "0.10"
rkyv = {version = "0.7.19", features = ["indexmap"]}
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
