[package]
authors = ["Leko <leko.noor@gmail.com>"]
edition = "2018"
name = "goya-ipadic"
publish = false
version = "0.1.0"

[dependencies]
csv = "1.1"
encoding_rs = "0.8"
glob = "0.3"
goya = {path = "../goya"}
indexmap = {version = "1.7", features = ["serde"]}
regex = "1.5"
rkyv = {git = "https://github.com/rkyv/rkyv", tag = "v0.7.19", features = ["indexmap"]}
serde = {version = "1.0", features = ["derive"]}
