[package]
authors = ["Leko <leko.noor@gmail.com>"]
categories = ["text-processing"]
description = "IPA dictionary for Goya"
edition = "2018"
license = "Apache-2.0 OR MIT"
name = "goya-ipadic"
version = "0.1.6"

[dependencies]
csv = "1.1"
encoding_rs = "0.8"
glob = "0.3"
goya = {version = "^0.1.7", path = "../goya"}
indexmap = {version = "1.7", features = ["serde"]}
regex = "1.5"
rkyv = {version = "0.7.19", features = ["indexmap"]}
serde = {version = "1.0", features = ["derive"]}
