[package]
name = "morphological_analysis"
version = "0.1.0"
edition = "2018"
authors = ["Leko <leko.noor@gmail.com>"]

[dependencies]
csv = "1.1"
encoding_rs = "0.8"
glob = "0.3"
itertools = "0.10"
log = "0.4"
indexmap = { version = "1.7", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
regex = "1.5"
