[package]
authors = ["Leko <leko.noor@gmail.com>"]
categories = ["wasm", "data-structures", "text-processing"]
description = "WebAssembly binding of Goya"
edition = "2018"
license = "MIT"
name = "goya-core"
repository = "https://github.com/Leko/goya"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.17"
goya = {path = "../goya"}
goya-ipadic = {path = "../ipadic"}
lazy_static = "1.4"
rkyv = {git = "https://github.com/rkyv/rkyv", tag = "v0.7.19"}
serde = {version = "1.0", features = ["derive"]}
serde-wasm-bindgen = "0.3.1"
wasm-bindgen = {version = "0.2.78", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.28"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['--dce', '-O4']
