[package]
authors = ["Leko <leko.noor@gmail.com>"]
categories = ["wasm", "data-structures", "text-processing"]
description = "WebAssembly binding of Goya"
edition = "2018"
license = "Apache-2.0 OR MIT"
name = "goya-core"
publish = false
repository = "https://github.com/Leko/goya"
version = "0.1.6"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.17"
goya = {version = "^0.1.7", path = "../goya"}
goya-ipadic = {version = "^0.1.6", path = "../ipadic"}
lazy_static = "1.4"
rkyv = {version = "0.7.19", features = ["indexmap"]}
rmp-serde = "1.0.0-beta.2"
serde = {version = "1.0", features = ["derive"]}
serde-wasm-bindgen = "0.3.1"
wasm-bindgen = {version = "0.2.78", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.28"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['--dce', '-O4']
