[package]
authors = ["Leko <leko.noor@gmail.com>"]
categories = ["wasm", "data-structures", "text-processing"]
description = "WebAssembly binding of Goya"
edition = "2018"
license = "MIT"
name = "goya-features"
repository = "https://github.com/Leko/goya"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
goya = {path = "../goya"}
lazy_static = "1.4"
rkyv = {git = "https://github.com/rkyv/rkyv", tag = "v0.7.19"}
serde-wasm-bindgen = "0.3.1"
serde_json = "1.0"
wasm-bindgen = {version = "0.2.78", features = ["serde-serialize"]}
