[package]
authors = ["Leko <leko.noor@gmail.com>"]
categories = ["wasm", "data-structures", "text-processing"]
description = "WebAssembly binding of Goya"
edition = "2018"
license = "Apache-2.0 OR MIT"
name = "goya-features"
publish = false
repository = "https://github.com/Leko/goya"
version = "0.1.2"

[lib]
crate-type = ["cdylib"]

[dependencies]
goya = {version = "0.1.1", path = "../goya"}
lazy_static = "1.4"
rmp-serde = "1.0.0-beta.2"
serde-wasm-bindgen = "0.3.1"
wasm-bindgen = {version = "0.2.78", features = ["serde-serialize"]}

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['--dce', '-O4']
